pghoard X.X.X (2016-XX-XX)
==========================

* Support for Telegraf statsd


pghoard 1.3.0 (2016-05-30)
==========================

* Support for PostgreSQL 9.6 (beta 1)
* Always use strings as metadata keys and values in object storage, fixing
  recent issues with Google Cloud Storage which started throwing a "Backend
  Error" when an integer value was used as well as fixing old WAL cleanup.
* Make LZMA compression level configurable
* Fix unprocessed file handling in receivexlog mode after restart
* Miscellaneous bug fixes

pghoard 1.2.0 (2016-04-28)
==========================

* Support for PostgreSQL 9.2
* Support for Python 3.3
* Various commands no longer require site if a config file with a single
  site is used.  Configuration handling was refactored and much improved
* S3 multipart uploads for greater network error resiliency
* Creating new basebackups by timer can be disabled entirely for a site by
  removing the basebackup_interval_hours option or setting it to a null
  value
* Ignore requests to archive backup labels, they are not used by PGHoard
* Emit a warning when running under systemd without python-systemd installed
* Test and logging improvements, including support for proper use of syslog
* Miscellaneous bug fixes

pghoard 1.1.0 (2016-04-05)
==========================

* Consider last basebackup's start time instead of completion time for
  scheduling the next basebackup
* pghoard_create_keys can now update an existing configuration file
* Support for OpenStack Swift object storage
* More generic object storage configuration.  All configuration keys for
  object stores are passed as-is to the implementation.  This also meant
  that some defaults were dropped: bucket_name and container_name must be
  manually set, they no longer default to `pghoard`.
* New test cases to validate object storage interfaces - the tests revealed
  a couple of minor issues which have been fixed in this release